# Mini-Assessment-Engine

./: .dockerignore  .env.example  Acad AI.postman_collection.json  Dockerfile  README.md  docker-compose.yml  dump_file.sql  pyproject.toml
src/: manage.py
src/answers/: models.py  serializer.py  urls.py  views.py
src/answers/migrations/: 0001_initial.py
src/assessment_engine/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/choice/: admin.py  models.py  serializer.py
src/choice/migrations/: 0001_initial.py
src/courses/: models.py
src/courses/migrations/: 0001_initial.py
src/exams/: models.py  serializers.py
src/exams/migrations/: 0001_initial.py
src/questions/: models.py  serializer.py
src/questions/migrations/: 0001_initial.py
src/submissions/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/submissions/migrations/: 0001_initial.py
src/userauth/: urls.py
src/utility/: mixins.py
